Add comprehensive activity recommendations with 27 activities across 6 categories

--- a/Front/index.html
+++ b/Front/index.html
@@ -189,9 +189,45 @@
                                 <label for="activity">Activity (Optional)</label>
                                 <select id="activity">
                                     <option value="none">Select an activity</option>
-                                    <option value="eat-out">Eating out</option>
-                                    <option value="park">Go to the park</option>
-                                    <option value="stargazing">Stargazing</option>
+                                    <optgroup label="Outdoor Sports">
+                                        <option value="running">Running</option>
+                                        <option value="cycling">Cycling</option>
+                                        <option value="hiking">Hiking</option>
+                                        <option value="soccer">Playing Soccer</option>
+                                        <option value="tennis">Playing Tennis</option>
+                                        <option value="golf">Playing Golf</option>
+                                    </optgroup>
+                                    <optgroup label="Recreation">
+                                        <option value="park">Going to the Park</option>
+                                        <option value="picnic">Picnic</option>
+                                        <option value="beach">Beach Day</option>
+                                        <option value="fishing">Fishing</option>
+                                        <option value="camping">Camping</option>
+                                        <option value="gardening">Gardening</option>
+                                    </optgroup>
+                                    <optgroup label="Social Activities">
+                                        <option value="eat-out">Eating Outdoors</option>
+                                        <option value="bbq">BBQ/Grilling</option>
+                                        <option value="wedding">Outdoor Wedding</option>
+                                        <option value="concert">Outdoor Concert</option>
+                                        <option value="festival">Festival/Fair</option>
+                                    </optgroup>
+                                    <optgroup label="Photography & Observation">
+                                        <option value="stargazing">Stargazing</option>
+                                        <option value="photography">Photography</option>
+                                        <option value="bird-watching">Bird Watching</option>
+                                        <option value="aurora">Aurora Watching</option>
+                                    </optgroup>
+                                    <optgroup label="Transportation">
+                                        <option value="motorcycle">Motorcycle Ride</option>
+                                        <option value="drone">Flying Drone</option>
+                                        <option value="sailing">Sailing</option>
+                                    </optgroup>
+                                    <optgroup label="Work & Maintenance">
+                                        <option value="construction">Outdoor Construction</option>
+                                        <option value="painting">Exterior Painting</option>
+                                        <option value="car-wash">Car Washing</option>
+                                    </optgroup>
                                 </select>
                             </div>
                         </div>
@@ -238,7 +274,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Raincheck. A project for the 
+            <p>&copy; 2025 Raincheck. A project for the 
                 <a href="https://www.spaceappschallenge.org/" target="_blank" rel="noopener noreferrer">Nasa Space Apps Challenge</a>.
             </p>
         </div>
