Fix responsive issues and create common.js for shared functionality

--- a/Front/pages/today.html
+++ b/Front/pages/today.html
@@ -120,7 +120,7 @@
 
     <script src="../js/config.js"></script>
     <script src="../js/utils.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="../js/common.js"></script>
     <script src="../js/today.js"></script>
 </body>
 
