--- a/Front/pages/about.html
+++ b/Front/pages/about.html
@@ -133,7 +133,7 @@
         </div>
     </footer>
 
-    <script src="../js/main.js"></script>
+    <script src="../js/common.js"></script>
 </body>
 
 </html>
