--- a/Front/pages/week.html
+++ b/Front/pages/week.html
@@ -64,7 +64,7 @@
 
     <script src="../js/config.js"></script>
     <script src="../js/utils.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="../js/common.js"></script>
     <script src="../js/week.js"></script>
 </body>
 </html>
