change link style

--- a/Front/pages/today.html
+++ b/Front/pages/today.html
@@ -112,7 +112,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Raincheck. A project for the
-                <a href="https://www.spaceappschallenge.org/" target="_blank" rel="noopener noreferrer">Nasa Space Apps
+                <a href="https://www.spaceappschallenge.org/" target="_blank" rel="noopener noreferrer" id="footer-link">Nasa Space Apps
                     Challenge</a>.
             </p>
         </div>
