--- a/Front/index.html
+++ b/Front/index.html
@@ -284,5 +284,6 @@
     <script src="js/utils.js"></script>
     <script src="js/main.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/fetch_definitivo.js"></script>
 </body>
 </html>
